2011-02-06 Chris Allegretta <chrisa@asty.org>
        * src/*: Retire iso_me_harder_funcmap based on suggestion by <bernd.spaeth@gmx.net>
	  This does add 20KB to nano's executable size but it gets rid of a lot of indirection
	  that makes people stomach turn.  There are several new stub functions and need of more
	  tidying as a result of this.
	* files.c (write_file): Fix problems with writing the backup file (albeit interactively)
	  with new function prompt_failed_backupwrite(), allows more secure handling of problems
	  with failing to write the backup file compared to 'allow_insecure_backup'.
	* winio.c (edit_redraw): Removed unused variable

2010-11-15 Chris Allegretta <chrisa@asty.org>
	* Add a section to the FAQ about using nanorc on Win32 systems.

2010-11-12 Chris Allegretta <chrisa@asty.org>
	* Add check for RESTRICTED mode back to speller, suspend and insert file
	  routines, since adding key bindings broke the fact that they should be
	  disabled in restricted mode.  Fixes Savannah bug 31625 reported by
	  Charlie Somerville.

GNU nano 2.2.5 - 2010.08.05
2010-08-04 Lauri Kasanen <curaga@operamail.comcuraga@operamail.com>
        * doc/syntax/mgp.nanorc: New Magicpoint syntax highlighting definition

2010-08-04 Peter <exodus@savannah>
	* doc/syntax/tex.nanorc: No longer highlight escaped comments

2010-06-20 Chris Allegretta <chrisa@asty.org>
	* New rc file option allow_insecure_backup, allows the previous security
	  fixes for backup files to be overridden if you're really positive
	  you want to.  Fixes Savannah bug 29732 by Brian Szymanski <skibrianski>.

2010-05-23 Chris Allegretta <chrisa@asty.org>
	* files.c (write_file): Don't even try to chown() the backup
	  file unless we're root, since it's probably going to fail if
	  we're editing a file we don't own.  Fixes Savannah bug
	  29514: [nano 2.2.2] backup should ignore chown errors.

GNU nano 2.2.4 - 2010.04.15
2010-04-07 Chris Allegretta <chrisa@asty.org>