@@ -1,5 +1,6 @@
 ## Here is a short example for HTML.
 ##
 syntax "html" "\.html$"
+magic "HTML document text"
 color blue start="<" end=">"
 color red "&[^;[[:space:]]]*;"
